first few html elements

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>My First Page</title>
   </head>
   <body>
-
+    <h1>Top Header</h1>
+    <p>first paragraph</p>
+    <p>second paragraph</P>
   </body>
 </html>
